--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "now --prod",
+    "deploy": "now --prod"
   },
   "eslintConfig": {
     "extends": "react-app"
